Bug 41613 - ICE for gfortran.dg/dynamic_dispatch_*.f03 on powerpc-apple-darwin
Summary: ICE for gfortran.dg/dynamic_dispatch_*.f03 on powerpc-apple-darwin
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Paul Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-06 20:31 UTC by Dominique d'Humieres
Modified: 2009-10-07 09:45 UTC (History)
3 users (show)

See Also:
Host: powerpc-apple-darwin9
Target: powerpc-apple-darwin9
Build: powerpc-apple-darwin9
Known to work:
Known to fail:
Last reconfirmed: 2009-10-07 04:32:43


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2009-10-06 20:31:03 UTC
On powerpc-apple-darwin9 the tests gfortran.dg/dynamic_dispatch_*.f03 fail with:

/opt/gcc/_gcc_clean/gcc/testsuite/gfortran.dg/dynamic_dispatch_1.f03:30:0: internal compiler error: in resolve_compcall, at fortran/resolve.c:5038
Comment 1 Steve Ellcey 2009-10-06 20:43:24 UTC
I am seeing this on ia64-hp-hpux11.23 too.
Comment 2 Paul Thomas 2009-10-07 04:32:43 UTC
Dear Dominique and Steve,

This is clearly mine.  I cannot diagnose it but have a pretty shrewd idea of what is happening.

I will apply an 'obvious' patch after regtesting.

Thanks for the report.

Paul 
Comment 3 Paul Thomas 2009-10-07 05:17:46 UTC
Subject: Bug 41613

Author: pault
Date: Wed Oct  7 05:17:29 2009
New Revision: 152513

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=152513
Log:
2009-10-07  Paul Thomas <pault@gcc.gnu.org>

        PR fortran/41613
        * resolve.c (check_class_members): Reset compcall.assign.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/resolve.c

Comment 4 Dominique d'Humieres 2009-10-07 09:45:08 UTC
The fix in revision 152513 has been regtested without regression. Closing as fixed.