re PR fortran/41613 (ICE for gfortran.dg/dynamic_dispatch_*.f03 on powerpc-apple-darwin)

2009-10-07  Paul Thomas <pault@gcc.gnu.org>

        PR fortran/41613
        * resolve.c (check_class_members): Reset compcall.assign.

From-SVN: r152513